--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -44,6 +44,14 @@
 
 .dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.resourceHealth|.dashContent.criticalAlerts|.dashContent.recentResources
 
+.dashContent.controlActions.lastCompleted=5
+.dashContent.controlActions.mostFrequent=5
+.dashContent.controlActions.nextScheduled=5
+.dashContent.controlActions.useLastCompleted=true
+.dashContent.controlActions.useMostFrequent=false
+.dashContent.controlActions.useNextScheduled=true
+.dashContent.controlActions.past=604800000
+
 .resource.common.monitor.visibility.favoriteMetrics.platform=
 .resource.common.monitor.visibility.favoriteMetrics.server=
 .resource.common.monitor.visibility.favoriteMetrics.service=
