--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -573,7 +573,7 @@ dash.home.SavedQueries=Saved Charts
 dash.home.SummaryCounts=Summary Counts
 dash.home.ResourceHealth=Favorite Resources
 dash.home.ResourceHealth.rss.item.availability=Current Availability ({0})
-dash.home.RecentResources=Recently Viewed Resources
+dash.home.RecentResources=RECENTLY VIEWED RESOURCES
 dash.home.RecentlyApproved=Recently Added Resources
 dash.home.CriticalAlerts=Recent Alerts
 dash.home.Inventory=Recent Inventory Changes
