Match the dropdown names with the titles

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -635,8 +635,8 @@ dash.home.AddContent.select=Select Portlet
 .dashContent.resourceHealth=Favorite Resources
 .dashContent.recentResources=Recently Viewed Resources
 .dashContent.recentlyApproved=Recently Added Resources
-.dashContent.criticalAlerts=Alerts
-.dashContent.autoDiscovery=Auto-Discovery Queue
+.dashContent.criticalAlerts=Recent Alerts
+.dashContent.autoDiscovery=Auto-Discovery
 .dashContent.controlActions=Control Actions
 .dashContent.problems=Things To Do in HQ
 .dashContent.problemResources=Problem Resources
