Add start of availability summary portlet.

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -63,3 +63,6 @@
 .resource.common.monitor.visibility.metricRange.unit=
 .resource.common.monitor.visibility.metricThreshold=1
 
+.dashContent.availsummary.resources=
+.dashContent.availsummary.numToShow=10
+
