--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -565,6 +565,7 @@ dash.home.RecentlyApproved.Title=HQ Dashboard Settings: Recently Added
 dash.home.ControlActions.Title=HQ Dashboard Settings: Control Actions
 dash.home.Problems.Title=HQ Dashboard Settings: Things To Do in HQ
 dash.home.ProblemResources.Settings.Title=HQ Dashboard Settings: Problem Resources Settings
+dash.home.AvailSummary.Title=HQ Dashboard Settings: Availability Summary
 
 # Dashboard
 dash.home.QuickControl=QuickControl
@@ -581,6 +582,7 @@ dash.home.AutoDiscovery=Auto-Discovery
 dash.home.Control=Control Actions
 dash.home.Problems=Things To Do in HQ
 dash.home.ProblemResources=Problem Resources
+dash.home.AvailSummary=Availability Summary
 
 dash.home.ProblemResources.seeAll=[See All]
 dash.home.ProblemResources.timeRange=From {0} to {1}.
@@ -640,6 +642,7 @@ dash.home.AddContent.select=Select Portlet
 .dashContent.controlActions=Control Actions
 .dashContent.problems=Things To Do in HQ
 .dashContent.problemResources=Problem Resources
+.dashContent.availSummary=Availability Summary
 
 dash.autoDiscovery.import.Error=Unable to import platform : {0}
 dash.autoDiscovery.import.ignore.Error=Servers already in the inventory cannot be ignored
@@ -715,6 +718,7 @@ dash.settings.PageTitle.AL=HQ Dashboard Settings: Add to List
 dash.settings.PageTitle.RH.addResources=HQ Dashboard Settings: Favorite Resources Add/Remove Resources
 dash.settings.PageTitle.A.addResources=HQ Dashboard Settings: Alerts Add/Remove Resources
 dash.settings.PageTitle.PR=HQ Dashboard Settings: Problem Resources
+dash.settings.PageTitle.AS=HQ Dashboard Settings: Availability Summary
  
 dash.settings.DisplaySettings=Display Settings
 dash.settings.SelectedCharts=Selected Charts
@@ -739,6 +743,7 @@ dash.settings.FormLabel.ProblemResourcesMax=problem resources on the dashboard
 dash.settings.FormLabel.ProblemResourcesHours=hours
 dash.settings.FormLabel.Left=Left column (skinny)
 dash.settings.FormLabel.Right=Right column (wide)
+dash.settings.FormLabel.AvailSummaryRange=Display Range: 
 dash.settings.FormContent.Yes=YES
 dash.settings.FormContent.No=NO
 
@@ -762,6 +767,10 @@ dash.settings.recentlyApproved.approved=days
 
 dash.settings.resourcehealth.AddResourcesPageTitle=Dashboard Settings: Favorite Resources: Add Resources
 dash.settings.alerts.AddResourcesPageTitle=Dashboard Settings: Alerts Add/Remove Resources
+dash.settings.availsummary.AddResourcesPageTitle=Dashboard Settings: Availability Summary Add/Remove Resources
+
+dash.settings.availSummary.top=Display top
+dash.settings.availSummary.resources=resource types from the list below:
 
 resource.type.Platform=Platform
 resource.type.Server=Server
@@ -769,7 +778,6 @@ resource.type.Service=Service
 resource.type.PlatformService=Platform Service
 resource.type.Group=Group
 resource.type.Application=Application
-
 
 # RESOURCE HUB
 resource.hub.ResourceHubTitle=HQ Browse Resources
