Add resource string for Escalations

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -250,6 +250,7 @@ admin.role.perms.type.covalentEAMPlatform=Platforms
 admin.role.perms.type.covalentEAMServer=Servers
 admin.role.perms.type.covalentEAMService=Services
 admin.role.perms.type.covalentEAMApplication=Applications
+admin.role.perms.type.EscalationScheme=Escalations
 admin.role.perms.perm.view=View
 admin.role.perms.perm.create=Create
 admin.role.perms.perm.modify=Modify
@@ -1747,6 +1748,7 @@ monitoring.events.MiniTabs.Roles=Notify Roles
 monitoring.events.MiniTabs.CAMusers=Notify HQ Users
 monitoring.events.MiniTabs.OR=Notify Other Recipients
 monitoring.events.MiniTabs.SNMP=SNMP Trap
+monitoring.events.MiniTabs.Escalation=Escalation
 
 monitoring.baseline.BlockTitle.MetricBaseline={0} : Metric Baseline
 monitoring.baseline.BlockLabel.BaselineValue=Baseline Value:
