Add start of metric viewer portlet.

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -66,3 +66,6 @@
 .dashContent.availsummary.resources=
 .dashContent.availsummary.numToShow=10
 
+.dashContent.metricviewer.resources=
+.dashContent.metricviewer.numToShow=10
+
