--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -567,6 +567,7 @@ dash.home.ControlActions.Title=HQ Dashboard Settings: Control Actions
 dash.home.Problems.Title=HQ Dashboard Settings: Things To Do in HQ
 dash.home.ProblemResources.Settings.Title=HQ Dashboard Settings: Problem Resources Settings
 dash.home.AvailSummary.Title=HQ Dashboard Settings: Availability Summary
+dash.home.MetricViewer.Title=HQ Dashboard Settinds: Metric Viewer
 
 # Dashboard
 dash.home.QuickControl=QuickControl
@@ -584,6 +585,7 @@ dash.home.Control=Control Actions
 dash.home.Problems=Things To Do in HQ
 dash.home.ProblemResources=Problem Resources
 dash.home.AvailSummary=Availability Summary
+dash.home.MetricViewer=Metric Viewer
 
 dash.home.ProblemResources.seeAll=[See All]
 dash.home.ProblemResources.timeRange=From {0} to {1}.
@@ -644,6 +646,7 @@ dash.home.AddContent.select=Select Portlet
 .dashContent.problems=Things To Do in HQ
 .dashContent.problemResources=Problem Resources
 .dashContent.availSummary=Availability Summary
+.dashContent.metricViewer=Metric Viewer
 
 dash.autoDiscovery.import.Error=Unable to import platform : {0}
 dash.autoDiscovery.import.ignore.Error=Servers already in the inventory cannot be ignored
@@ -720,6 +723,7 @@ dash.settings.PageTitle.RH.addResources=HQ Dashboard Settings: Favorite Resource
 dash.settings.PageTitle.A.addResources=HQ Dashboard Settings: Alerts Add/Remove Resources
 dash.settings.PageTitle.PR=HQ Dashboard Settings: Problem Resources
 dash.settings.PageTitle.AS=HQ Dashboard Settings: Availability Summary
+dash.settings.PageTitle.MV=HQ Dashboard Settinds: Metric Viewer
  
 dash.settings.DisplaySettings=Display Settings
 dash.settings.SelectedCharts=Selected Charts
@@ -744,6 +748,7 @@ dash.settings.FormLabel.ProblemResourcesHours=hours
 dash.settings.FormLabel.Left=Left column (skinny)
 dash.settings.FormLabel.Right=Right column (wide)
 dash.settings.FormLabel.AvailSummaryRange=Display Range: 
+dash.settings.FormLabel.MetricViewerRange=Display Range:
 
 dash.settings.auto-disc.completed=completed Auto-Discoveries.
 dash.settings.auto-disc.last=last
@@ -766,9 +771,13 @@ dash.settings.recentlyApproved.approved=days
 dash.settings.resourcehealth.AddResourcesPageTitle=Dashboard Settings: Favorite Resources: Add Resources
 dash.settings.alerts.AddResourcesPageTitle=Dashboard Settings: Alerts Add/Remove Resources
 dash.settings.availsummary.AddResourcesPageTitle=Dashboard Settings: Availability Summary Add/Remove Resources
+dash.settings.metricviewer.AddResourcesPageTitle=Dashboard Settings: Metric Viewer Add/Remove Resources
 
 dash.settings.availSummary.top=Display top
 dash.settings.availSummary.resources=resource types from the list below:
+
+dash.settings.metricViewer.top=Display top
+dash.settings.metricViewer.resources=resources from the list below:
 
 resource.type.Platform=Platform
 resource.type.Server=Server
