Add page title for escalation

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1680,6 +1680,13 @@ alert.config.platform.props.ViewDef.email.Title=HQ View Platform Alert Definitio
 alert.config.server.props.ViewDef.email.Title=HQ View Server Alert Definition, Email Recipients - {0}
 alert.config.service.props.ViewDef.email.Title=HQ View Service Alert Definition, Email Recipients - {0}
 
+# view definition, escalation
+alert.config.application.props.ViewDef.escalation.Title=HQ View Application Alert Definition, Escalation - {0}
+alert.config.group.props.ViewDef.escalation.Title=HQ View Group Alert Definition, Escalation - {0}
+alert.config.platform.props.ViewDef.escalation.Title=HQ View Platform Alert Definition, Escalation - {0}
+alert.config.server.props.ViewDef.escalation.Title=HQ View Server Alert Definition, Escalation - {0}
+alert.config.service.props.ViewDef.escalation.Title=HQ View Service Alert Definition, Escalation - {0}
+
 alert.config.edit.page.Cond.PageTitle=Edit {0}: {1}: Alert Condition Set
 # edit alert condition set
 alert.config.application.edit.page.Cond.Title=HQ Edit Application Alert Definition - {0}
