Additional resource properites for the metric viewer portlet.

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -68,4 +68,6 @@
 
 .dashContent.metricviewer.resources=
 .dashContent.metricviewer.numToShow=10
+.dashContent.metricviewer.resType=
+.dashContent.metricviewer.metric=
 
