--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -567,7 +567,7 @@ dash.home.ControlActions.Title=HQ Dashboard Settings: Control Actions
 dash.home.Problems.Title=HQ Dashboard Settings: Things To Do in HQ
 dash.home.ProblemResources.Settings.Title=HQ Dashboard Settings: Problem Resources Settings
 dash.home.AvailSummary.Title=HQ Dashboard Settings: Availability Summary
-dash.home.MetricViewer.Title=HQ Dashboard Settinds: Metric Viewer
+dash.home.MetricViewer.Title=HQ Dashboard Settings: Metric Viewer
 
 # Dashboard
 dash.home.QuickControl=QuickControl
@@ -723,7 +723,7 @@ dash.settings.PageTitle.RH.addResources=HQ Dashboard Settings: Favorite Resource
 dash.settings.PageTitle.A.addResources=HQ Dashboard Settings: Alerts Add/Remove Resources
 dash.settings.PageTitle.PR=HQ Dashboard Settings: Problem Resources
 dash.settings.PageTitle.AS=HQ Dashboard Settings: Availability Summary
-dash.settings.PageTitle.MV=HQ Dashboard Settinds: Metric Viewer
+dash.settings.PageTitle.MV=HQ Dashboard Settings: Metric Viewer
  
 dash.settings.DisplaySettings=Display Settings
 dash.settings.SelectedCharts=Selected Charts
@@ -749,6 +749,8 @@ dash.settings.FormLabel.Left=Left column (skinny)
 dash.settings.FormLabel.Right=Right column (wide)
 dash.settings.FormLabel.AvailSummaryRange=Display Range: 
 dash.settings.FormLabel.MetricViewerRange=Display Range:
+dash.settings.FormLabel.ResourceType=Resource Type:
+dash.settings.FormLabel.Metric=Metric
 
 dash.settings.auto-disc.completed=completed Auto-Discoveries.
 dash.settings.auto-disc.last=last
@@ -774,10 +776,12 @@ dash.settings.availsummary.AddResourcesPageTitle=Dashboard Settings: Availabilit
 dash.settings.metricviewer.AddResourcesPageTitle=Dashboard Settings: Metric Viewer Add/Remove Resources
 
 dash.settings.availSummary.top=Display top
-dash.settings.availSummary.resources=resource types from the list below:
+dash.settings.availSummary.resources=resource types.
 
 dash.settings.metricViewer.top=Display top
-dash.settings.metricViewer.resources=resources from the list below:
+dash.settings.metricViewer.resources=resources.
+dash.settings.metricViewer.resourceType=Resource Type
+dash.settings.metricViewer.metric=Metric
 
 resource.type.Platform=Platform
 resource.type.Server=Server
