Checkpoint metric view portlet.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -780,8 +780,11 @@ dash.settings.availSummary.resources=resource types.
 
 dash.settings.metricViewer.top=Display top
 dash.settings.metricViewer.resources=resources.
-dash.settings.metricViewer.resourceType=Resource Type
-dash.settings.metricViewer.metric=Metric
+dash.settings.metricViewer.selectResourceType=Select Resource Type...
+dash.settings.metricViewer.platformTypes=Platform Types
+dash.settings.metricViewer.serverTypes=Server Types
+dash.settings.metricViewer.serviceTypes=ServiceTypes
+dash.settings.metricViewer.selectMetric=Select Metric...
 
 resource.type.Platform=Platform
 resource.type.Server=Server
