Put the button labels in the resource bundle

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -471,6 +471,7 @@ admin.home.ListRoles=List Roles
 admin.home.Settings=Settings:
 admin.home.ServerConfig=HQ Server Configuration
 admin.home.ResourceTemplates=Monitoring Defaults Configuration
+admin.home.EscalationSchemes=Escalation Schemes Configuration
 
 # ADMIN.SETTINGS
 admin.settings.EditServerConfig.Title=HQ Edit HQ Server Settings
@@ -2562,3 +2563,6 @@ resource.common.monitor.label.events.Info=Info
 resource.common.monitor.label.events.Debug=Debug
 resource.common.monitor.label.events.Alert=HQ Alerts
 resource.common.monitor.label.events.Control=Control Actions
+
+resource.common.alert.action.acknowledge.label=ACKNOWLEDGE
+resource.common.alert.action.fixed.label=FIXED
