Use JSON to dynamically generate the table for escalation display

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -553,7 +553,10 @@ admin.settings.error.InvalidSNMPTrapOID=SNMP Trap OID invalid, please enter OID 
 admin.settings.error.InvalidSNMPEngineID=SNMP Engine ID is invalid, must be a valid number.
 admin.settings.error.InvalidSNMPGenericID=SNMP Generic ID is invalid, must be a valid number.
 
+admin.config.link.Return=&lt;&lt; Return to Administration 
 admin.config.confirm.saveSettings=The configuration settings were successfully saved.
+admin.config.message.noEscalations=There are no escalation schemes
+
 # Dashboard Titles
 dash.home.PageTitle=Dashboard
 
