--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,7 @@
   <path id="alljars">
     <path refid="pdknative" />
     <fileset dir="${lather.lib}" includes="lather.jar" />
-    <fileset dir="${thirdparty.lib}" includes="*.jar" excludes="aspectj*.jar,cactus*.jar,mockejb.jar,mockrunner-ejb.jar"/>
+    <fileset dir="${thirdparty.lib}" includes="*.jar" excludes="aspectj*.jar,strutstest-*.jar,cactus*.jar,mockejb.jar,mockrunner-ejb.jar"/>
     <fileset dir="${thirdparty.lib}" includes="*.zip" />      
     <fileset dir="${thirdparty.lib}/oracle_jdbc" includes="*.jar" />
     <fileset dir="${thirdparty.lib}/postgresql"
@@ -99,7 +99,8 @@
 
   <path id="testjars">
     <path refid="alljars" />
-    <path location="${thirdparty.lib}/cactus-13-1.6.1.jar" />
+    <path location="${thirdparty.lib}/cactus-1.7.2.jar" />
+    <path location="${thirdparty.lib}/strutstest-2.1.3.jar" />
     <path location="${thirdparty.lib}/mockejb.jar" />
     <path location="${thirdparty.lib}/mockrunner-ejb.jar" />
   </path>
@@ -224,26 +225,6 @@
     <copy toDir="${build.dir}/classes">
       <fileset dir="${hq.home}/etc" includes="cactus.properties,log_client.properties" />
     </copy>
-  </target>
-
-  <target name="compile-test" depends="compile">
-    <mkdir dir="${build.dir}/test-classes" />
-    <hq-javac destdir="${build.dir}/test-classes">
-      <classpath>
-        <path refid="testjars"/>
-        <path location="${build.dir}/classes"/>
-      </classpath>
-      <src>
-        <path location="test" />
-      </src>
-    </hq-javac>
-
-    <copy toDir="${build.dir}/test-classes">
-      <fileset dir="${hq.home}/etc" includes="cactus.properties,log_client.properties" />
-    </copy>
-    <condition property="pack-test.enable" value="true">
-      <isset property="debug.enable" />
-    </condition>
   </target>
 
   <!-- ==================== JSP precompile ============================ -->
@@ -388,12 +369,8 @@
         <include name="ant-lancher.jar" />
 
         <!--  in container test jar files -->
-        <include name="aspectjrt-1.2.1.jar" />
-        <include name="cactus-13-1.6.1.jar" />
         <include name="mockejb.jar" />
         <include name="mockrunner-ejb.jar" />
-        <include name="junit.jar" />
-        <include name="commons-httpclient-2.0.jar" />
       </fileset>
       <fileset dir="${sigar.lib}" >
         <include name="sigar.jar" />
@@ -455,24 +432,23 @@
     <property name="generate-manifest.notrequired" value="true" />
   </target>
 
-  <target name="pack-test" if="pack-test.enable">
+  <target name="pack-test">
     <mkdir dir="${ear.dir}/hq.war" />
     <mkdir dir="${ear.dir}/hq.war/WEB-INF/lib" />
 
     <copy todir="${ear.dir}/hq.war/WEB-INF/lib/" >
       <fileset dir="${thirdparty.lib}" >
         <include name="aspectjrt-1.2.1.jar" />
-        <include name="cactus-13-1.6.1.jar" />
-        <include name="mockejb.jar" />
-        <include name="jakarata-oro-2.0.7.jar" />
+        <include name="strutstest-2.1.3.jar" />
+        <include name="cactus-1.7.2.jar" />
         <include name="junit.jar" />
-        <include name="hibernate/cglib-2.1.3.jar" />
-        <include name="commons-httpclient-2.0.jar" />
       </fileset>
     </copy>
 
     <copy todir="${ear.dir}/hq.war/WEB-INF/classes" >
-      <fileset dir="${build.dir}/test-classes" includes="**" />
+      <fileset dir="${hq.home}/etc" includes="cactus.properties" />
+      <fileset dir="${build.dir}/classes"
+               includes="**/*CactusTest.class,**/HQCactusBase.class" />
     </copy>
   </target>
 
@@ -515,12 +491,6 @@
         <include name="struts.jar" />               
         <include name="struts-el.jar" />
         <include name="snmp4j.jar" />
-        <!--include name="aspectjrt-1.2.1.jar" />
-        <include name="cactus-13-1.6.1.jar" />
-        <include name="mockejb.jar" />
-        <include name="mockrunner-ejb.jar" />
-        <include name="junit.jar" />
-        <include name="commons-httpclient-2.0.jar" /-->
       </fileset> 
     </copy>
 
@@ -556,12 +526,6 @@
   <target name="build-war" description="Build and create the war" 
           depends="compile,pack-war" />
   
-  <target name="build-test-ear" description="Build and create the ear directory structure for test" 
-          depends="compile-test,pack-ear,pack-war" />
-
-  <target name="build-test-war" description="Build and create the war for test" 
-          depends="compile-test,pack-war" />
-
   <!-- ==================== UI packaging ==================== -->
   
   <target name="compile-ui" depends="init">
@@ -1229,15 +1193,7 @@
           depends="init,xdoclet,hibernate-pojo,build" >
   </target>
 
-  <target name="all-test" description="xdoclet, compile and pack for everything to test" 
-          depends="init,xdoclet,hibernate-pojo,build-test" >
-  </target>
-
  <target name="build" depends="init,compile,pack" description="Compile and pack - no code generation" >
-    <!--  Triger jboss reloading -->
-  </target>
-
- <target name="build-test" depends="init,compile-test,pack" description="Compile and pack - no code generation" >
     <!--  Triger jboss reloading -->
   </target>
 
@@ -1481,6 +1437,7 @@
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/junit.jar"/>
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/aspectjrt-*.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/cactus-*.jar" />
+    <delete file="${ear.dir}/hq.war/WEB-INF/lib/strutstest-*.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/mockejb.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/mockrunner-ejb.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/jakarta-oro-*.jar" />
