Display useful message if no metrics to display

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2050,6 +2050,7 @@ resource.common.monitor.visibility.problemMetric.Type=Resource: {0}
 resource.common.monitor.visibility.problemMetric.TypeCount=Resources: {0} ({1})
 resource.common.monitor.visibility.no.problems.to.display=No metrics to display
 resource.common.monitor.visibility.request.wait=Please wait while your graphs are being generated...
+resource.common.monitor.visibility.no.indicators=There are no indicator metrics to display
 resource.common.monitor.visibility.MiniTab.AutoGroupMetrics={0} Metrics
 
 resource.common.monitor.visibility.ApplicationHealth.AvailabilityTab=AVAILABILITY
