Specify the time range that we are looking at

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -94,7 +94,7 @@ login.message=&nbsp;
 
 #
 header.RecentAlerts=Recent Alerts
-header.NoRecentAlerts=(There are no recent alerts.)
+header.NoRecentAlerts=(There are no alerts in the last 8 hours.)
 
 #
 securityAlert.SecurityAlert.Title=HQ Security Alert
