Use Struts forms to help with escalation population

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -55,6 +55,7 @@ common.label.SelectAll=Select All
 common.label.None=None
 common.label.Never=Never
 common.title.Edit=Edit {0}
+common.label.CreateNew=Create New
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
