pack vmware plugin

--- a/build.xml
+++ b/build.xml
@@ -754,6 +754,8 @@
     <hqplugin name="memcached"/>
 
     <hqplugin name="mule"/>
+
+    <hqplugin name="vmware"/>
   </target>
   
   <!-- Copy plugins -->
