--- a/build.xml
+++ b/build.xml
@@ -863,6 +863,8 @@
     <hqplugin name="memcached"/>
 
     <hqplugin name="mule"/>
+
+    <hqplugin name="vmware"/>
   </target>
   
   <!-- Copy plugins -->
