use agent.logLevel property for the log level

--- a/etc/agent.properties
+++ b/etc/agent.properties
@@ -62,7 +62,8 @@ agent.tmpDir=./tmp
 ## Logging settings
 ##
 agent.logFile=${agent.logDir}/agent.log
-log4j.rootLogger=INFO, R
+agent.logLevel=INFO
+log4j.rootLogger=${agent.logLevel}, R
 
 log4j.appender.R.File=${agent.logFile}
 log4j.appender.R.MaxBackupIndex=1
