--- a/build.xml
+++ b/build.xml
@@ -662,6 +662,7 @@
        <!-- Postgres plugin uses the 7.4.3 driver -->
        <fileset dir="${thirdparty.lib}/postgresql" includes="postgresql-7.4.3.jar"/>
        <fileset dir="${thirdparty.lib}/mssql_jdbc" includes="ms*.jar" />
+       <fileset dir="${thirdparty.lib}/db2_jdbc" includes="*.jar" />
     </copy>
 
     <!-- requires ${pdk.lib} we just created -->
