Rearrange the wait dropdowns again

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1706,6 +1706,9 @@ alert.config.group.edit.page.Cond.Title=HQ Edit Group Alert Definition - {0}
 alert.config.platform.edit.page.Cond.Title=HQ Edit Platform Alert Definition - {0}
 alert.config.server.edit.page.Cond.Title=HQ Edit Server Alert Definition - {0}
 alert.config.service.edit.page.Cond.Title=HQ Edit Service Alert Definition - {0}
+alert.config.escalation.then=Then
+alert.config.escalation.end=continue
+alert.config.escalation.wait=wait {0} minutes
 
 alert.current.detail.PageTitle={0}: {1}: Alert Detail
 alert.current.detail.noresource.PageTitle={0}: Alert Detail
