Use resource properties.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -673,6 +673,7 @@ dash.home.TableHeader.NewResources=New Resources
 dash.home.TableHeader.Problem=Problem
 dash.home.TableHeader.SuggestedAction=Suggested Action
 dash.home.TableHeader.OOB=O.O.B.
+dash.home.TableHeader.Metric=Metric
 
 dash.home.DisplayCategory.AppTotal=Application Total
 dash.home.DisplayCategory.ServerTotal=Server Total
