Add resource strings for group alerting

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1860,6 +1860,8 @@ alert.config.props.CB.IfCondition=If Condition:
 alert.config.props.CB.IfConditionRequired=At least one Alert Condition is required.
 alert.config.props.CB.Or=OR
 alert.config.props.CB.And=AND
+alert.config.props.CB.If=If
+alert.config.props.CB.Has=Has
 alert.config.props.CB.AbsoluteValue=AbsoluteValue
 alert.config.props.CB.Percentage=Percentage
 alert.config.props.CB.TimePeriod=Time Period
@@ -2420,6 +2422,9 @@ resource.group.monitor.visibility.ServiceTypeTH=Service Type
 resource.group.monitor.visibility.MembersTH=Group Members Health
 
 resource.group.monitor.visibility.NotEnabled=The Configuration Properties have not been set to enable monitoring for Resources in this Group.
+
+# Group Alerts
+resource.group.alerts.config.num.members=There are {0} memeber(s) in this group
 
 # RESOURCE.AUTOGROUP.MONITOR TITLE
 resource.autogroup.monitor.visibility.CurrentHealthTitle=HQ View Auto-Group Monitor Current Health - {0}
