Add UI to pause escalation

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1660,6 +1660,7 @@ resource.application.inventory.confirm.EditGeneralProperties=Your changes have b
 
 # MONITORING: EVENTS: GENERAL
 alert.dropdown.SelectOption=Select...
+alert.escalation.pause=Pause escalation for
 
 # MONITORING: EVENTS: TITLES
 alert.config.edit.NewAlertDef.PageTitle=Edit {0}: New Alert Definition
