--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1711,6 +1711,13 @@ alert.config.service.edit.page.Cond.Title=HQ Edit Service Alert Definition - {0}
 alert.config.escalation.then=Then
 alert.config.escalation.end=continue
 alert.config.escalation.wait=wait {0} minutes
+alert.config.escalation.scheme=Escalation Scheme:
+alert.config.escalation.allow.pause=Allow user to pause escalation for
+alert.config.escalation.allow.continue=Continue escalation without pausing
+alert.config.escalation.state.change=If the alert state has changed:
+alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
+alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
+alert.config.escalation.notify.who=Select who to notify...
 
 alert.current.detail.PageTitle={0}: {1}: Alert Detail
 alert.current.detail.noresource.PageTitle={0}: Alert Detail
