Display "Fixed" in alert lists

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1991,6 +1991,7 @@ alerts.alert.AlertList.ListHeader.AlertDate=Alert Date
 alerts.alert.AlertList.ListHeader.AlertDefinition=Alert Definition
 alerts.alert.AlertList.ListHeader.AlertCondition=Alert Condition
 alerts.alert.AlertList.ListHeader.ActualValue=Actual Value
+alerts.alert.AlertList.ListHeader.Fixed=Fixed
 
 alerts.config.DefinitionList.Title=HQ List Alert Definitions
 alerts.config.DefinitionList.ListHeader.AlertName=Alert Name
