Display escalation action logs

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1930,6 +1930,7 @@ alert.current.detail.notify.Tab=Notification Actions
 alert.current.detail.notify.Roles=Roles Notified:
 alert.current.detail.notify.OR=Other Recipients Notified:
 alert.current.detail.notify.CAM=HQ Users Notified:
+alert.current.detail.escalation.action=Action {0}:
 alert.config.props.NB.Email=Email
 alert.config.props.NB.Via=Notify Via
 alert.config.props.NB.Name=Name
