Incorrect message, we're checking in the last two hours

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -95,7 +95,7 @@ login.message=&nbsp;
 
 #
 header.RecentAlerts=Recent Alerts
-header.NoRecentAlerts=(There are no alerts in the last 8 hours.)
+header.NoRecentAlerts=(There are no alerts in the last 2 hours.)
 
 #
 securityAlert.SecurityAlert.Title=HQ Security Alert
@@ -1718,6 +1718,7 @@ alert.config.escalation.state.change=If the alert state has changed:
 alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
 alert.config.escalation.notify.who=Select who to notify...
+alert.config.error.escalation.name.required=Escalation scheme name is required
 
 alert.current.detail.PageTitle={0}: {1}: Alert Detail
 alert.current.detail.noresource.PageTitle={0}: Alert Detail
