Add 'Sort Order' option to the metric viewer

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -756,7 +756,8 @@ dash.settings.FormLabel.Right=Right column (wide)
 dash.settings.FormLabel.AvailSummaryRange=Display Range: 
 dash.settings.FormLabel.MetricViewerRange=Display Range:
 dash.settings.FormLabel.ResourceType=Resource Type:
-dash.settings.FormLabel.Metric=Metric
+dash.settings.FormLabel.Metric=Metric:
+dash.settings.FormLabel.SortOrder=Sort Order:
 
 dash.settings.auto-disc.completed=completed Auto-Discoveries.
 dash.settings.auto-disc.last=last
@@ -791,6 +792,8 @@ dash.settings.metricViewer.platformTypes=Platform Types
 dash.settings.metricViewer.serverTypes=Server Types
 dash.settings.metricViewer.serviceTypes=ServiceTypes
 dash.settings.metricViewer.selectMetric=Select Metric...
+dash.settings.metricViewer.ascending=Lowest Values First
+dash.settings.metricViewer.descending=Highest Values First
 
 resource.type.Platform=Platform
 resource.type.Server=Server
