--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,6 +22,13 @@
     <param-name>RtEnabled</param-name>
     <param-value>false</param-value>
   </context-param>
+  
+  <!-- Hibernate session filter -->
+  <filter>
+    <filter-name>Hibernate-Session-Filter</filter-name>
+    <filter-class>org.hyperic.hibernate.filter.SessionFilter</filter-class>
+  </filter>      
+  
   <!-- authen filter -->
   <filter>
     <filter-name>Authentication-Filter</filter-name>
@@ -29,6 +36,12 @@
       org.hyperic.hq.ui.AuthenticationFilter
     </filter-class>
   </filter>  
+
+  <filter-mapping>
+    <filter-name>Hibernate-Session-Filter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <filter-mapping>
     <filter-name>Authentication-Filter</filter-name>
     <url-pattern>*.do</url-pattern>
