Display error messages for escalation deletion

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -557,6 +557,7 @@ admin.settings.error.InvalidSNMPGenericID=SNMP Generic ID is invalid, must be a 
 admin.config.link.Return=&lt;&lt; Return to Administration 
 admin.config.confirm.saveSettings=The configuration settings were successfully saved.
 admin.config.message.noEscalations=There are no escalation schemes
+admin.config.error.escalation.CannotDelete=Escalation cannot be deleted because it is currently in use
 
 # Dashboard Titles
 dash.home.PageTitle=Dashboard
