--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -854,7 +854,7 @@ resource.hub.search.ResultsFor=Results for keyword
 resource.hub.search.ClearKeywordFilterLink=- Clear Keyword Filter
 
 resource.hub.legend.available=Available
-resource.hub.legend.unavailable=Unvailable
+resource.hub.legend.unavailable=Unavailable
 resource.hub.legend.unknown=Unknown
 resource.hub.legend.partial=Partially Available
 resource.hub.legend.suspended=Suspended
