Add the concept of a startup listener, which is invoked when the application has started

--- a/build.xml
+++ b/build.xml
@@ -285,7 +285,8 @@
     </copy>
 
     <copy todir="${ear.dir}/META-INF" overwrite="true">
-        <fileset dir="etc" includes="application.xml,jboss-app.xml" />
+        <fileset dir="etc" 
+                 includes="application.xml,jboss-app.xml,startup_classes.txt" />
         <fileset dir="${build.dir}/classes/META-INF">
             <include name="**/*.hbm.xml" />
             <include name="*.cfg.xml" />
