Check to make sure the escalation name is unique

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1723,6 +1723,7 @@ alert.config.escalation.state.change.notify.previous=Notify previously notified 
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
 alert.config.escalation.notify.who=Select who to notify...
 alert.config.error.escalation.name.required=Escalation scheme name is required
+alert.config.error.escalation.name.dup=An escalation scheme already exists with the escalation name.  Please correct this error and submit again.
 
 alert.current.detail.PageTitle={0}: {1}: Alert Detail
 alert.current.detail.noresource.PageTitle={0}: Alert Detail
