Use tiles context to store list of tabs

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1791,8 +1791,8 @@ alert.config.edit.snmp.oid=OID:
 
 # MONITORING: EVENTS
 monitoring.events.MiniTabs.Roles=Notify Roles
-monitoring.events.MiniTabs.CAMusers=Notify HQ Users
-monitoring.events.MiniTabs.OR=Notify Other Recipients
+monitoring.events.MiniTabs.Users=Notify HQ Users
+monitoring.events.MiniTabs.Others=Notify Other Recipients
 monitoring.events.MiniTabs.SNMP=SNMP Trap
 monitoring.events.MiniTabs.Escalation=Escalation
 
